--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -5,9 +5,9 @@
 		<meta http-equiv="X-UA-Compatible" content="IE=edge">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<title>Identicum - OIDC Demo App</title>
-		<script src="webjars/jquery/3.3.1-1/jquery.min.js"></script>
-		<script src="webjars/bootstrap/4.5.0/js/bootstrap.min.js"></script>
-		<link rel="stylesheet" type="text/css" href="webjars/bootstrap/4.5.0/css/bootstrap.min.css" />
+		<script src="webjars/jquery/3.7.0/jquery.min.js"></script>
+		<script src="webjars/bootstrap/4.6.2/js/bootstrap.min.js"></script>
+		<link rel="stylesheet" type="text/css" href="webjars/bootstrap/4.6.2/css/bootstrap.min.css" />
 	</head>
 	<body class="h-100">
 		<div class="container h-100">
