--- a/src/main/resources/templates/user.html
+++ b/src/main/resources/templates/user.html
@@ -5,11 +5,11 @@
 		<meta http-equiv="X-UA-Compatible" content="IE=edge">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<title>Identicum - OIDC Demo App</title>
-		<script src="webjars/jquery/3.3.1-1/jquery.min.js"></script>
-		<script src="webjars/popper.js/1.14.3/umd/popper.min.js"></script>
-		<script src="webjars/bootstrap/4.5.0/js/bootstrap.min.js"></script>
-		<link rel="stylesheet" type="text/css" href="webjars/bootstrap/4.5.0/css/bootstrap.min.css" />
-		<link rel="stylesheet" href="webjars/font-awesome/5.2.0/css/all.css" />
+		<script src="webjars/jquery/3.7.0/jquery.min.js"></script>
+		<script src="webjars/popper.js/1.16/umd/popper.min.js"></script>
+		<script src="webjars/bootstrap/4.6.2/js/bootstrap.min.js"></script>
+		<link rel="stylesheet" type="text/css" href="webjars/bootstrap/4.6.2/css/bootstrap.min.css" />
+		<link rel="stylesheet" href="webjars/font-awesome/6.4.0/css/all.css" />
 	</head>
 	<body style="padding-top: 100px;">
 		<div class="navbar navbar-expand-lg fixed-top navbar-dark bg-dark">
